--- a/nexfellow-next/src/components/Landing/Navbar/Navbar.module.css
+++ b/nexfellow-next/src/components/Landing/Navbar/Navbar.module.css
@@ -66,6 +66,7 @@
 .navbarButton:focus {
   background-color: #1a9e9d;
   transform: scale(1.05);
+  color: white;
 }
 
 .navbarProfileButtons {
